# FileExplorer

./: .gitignore  Cargo.toml  README.md  README.ru.md
src/: app.rs  main.rs  tempCodeRunnerFile.rs
src/models/: clipboard.rs  disk_info.rs  file_action.rs  file_info.rs  mod.rs  sort_by.rs
src/services/: disks.rs  drawer.rs  file_operation.rs  indexer.rs  mod.rs  paste.rs  search.rs  sorter.rs
src/ui/: central_panel.rs  error.rs  extensions.rs  mod.rs  side_panel.rs  top_panel.rs
