[package]
name = "Explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui_material_icons = "0.5.0"
hf = "0.6.0"
infer = "0.15"
fs_extra = "1.3.0"
opener = "0.7"
ignore = "0.4.25"
whoami = "2.1.0"
dirs = "5.0"
regex = "1.12.3"
rayon = "1.11.0"
num_cpus = "1.17.0"
parking_lot = "0.12"
egui_extras = "0.33.3"
chrono = "0.4"
sysinfo = "0.38.1"
smol_str = "0.2"
caseless = "0.2"
winapi = { version = "0.3.9", features = ["processthreadsapi", "winbase"] }
walkdir = "2.5.0"
